--- a/MACircleProgressIndicator/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MACircleProgressIndicator/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1280" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="MAViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ni3-VA-YfB"/>
+                        <viewControllerLayoutGuide type="bottom" id="nNB-h3-dcI"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="999-rH-uma" customClass="MACircleProgressIndicator">
+                                <rect key="frame" x="350" y="354" width="68" height="88"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X11-LI-W94" customClass="MACircleProgressIndicator">
+                                <rect key="frame" x="320" y="489" width="128" height="148"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="02W-04-yAa">
+                                <rect key="frame" x="20" y="974" width="349" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="349" id="sYr-y7-YwS"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Increase">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="onIncrease:" destination="2" eventType="touchUpInside" id="Zco-CQ-yfc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tn4-B4-d0g">
+                                <rect key="frame" x="399" y="974" width="349" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="349" id="Xi1-wS-2Is"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Decrease">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="onDecrease:" destination="2" eventType="touchUpInside" id="aDF-jX-TP5"/>
@@ -54,16 +53,16 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="999-rH-uma" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="350" id="4ox-3L-oaG"/>
-                            <constraint firstItem="02W-04-yAa" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="71W-tb-Idx"/>
+                            <constraint firstItem="02W-04-yAa" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="71W-tb-Idx"/>
                             <constraint firstAttribute="bottom" secondItem="X11-LI-W94" secondAttribute="bottom" constant="387" id="BKy-pE-4uF"/>
                             <constraint firstItem="999-rH-uma" firstAttribute="top" secondItem="5" secondAttribute="top" constant="354" id="EZ9-8v-xaj"/>
-                            <constraint firstItem="999-rH-uma" firstAttribute="centerX" secondItem="X11-LI-W94" secondAttribute="centerX" type="default" id="HAN-p4-GAw"/>
+                            <constraint firstItem="999-rH-uma" firstAttribute="centerX" secondItem="X11-LI-W94" secondAttribute="centerX" id="HAN-p4-GAw"/>
                             <constraint firstAttribute="bottom" secondItem="999-rH-uma" secondAttribute="bottom" constant="582" id="JdO-T7-ErZ"/>
-                            <constraint firstItem="999-rH-uma" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" type="default" id="TNp-Wd-IWa"/>
-                            <constraint firstAttribute="trailing" secondItem="Tn4-B4-d0g" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="bt1-NR-MID"/>
+                            <constraint firstItem="999-rH-uma" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" id="TNp-Wd-IWa"/>
+                            <constraint firstAttribute="trailing" secondItem="Tn4-B4-d0g" secondAttribute="trailing" constant="20" symbolic="YES" id="bt1-NR-MID"/>
                             <constraint firstItem="X11-LI-W94" firstAttribute="top" secondItem="5" secondAttribute="top" constant="489" id="fiE-o3-PoQ"/>
-                            <constraint firstAttribute="bottom" secondItem="Tn4-B4-d0g" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="jzG-u9-Fvt"/>
-                            <constraint firstAttribute="bottom" secondItem="02W-04-yAa" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="shU-c7-6RS"/>
+                            <constraint firstAttribute="bottom" secondItem="Tn4-B4-d0g" secondAttribute="bottom" constant="20" symbolic="YES" id="jzG-u9-Fvt"/>
+                            <constraint firstAttribute="bottom" secondItem="02W-04-yAa" secondAttribute="bottom" constant="20" symbolic="YES" id="shU-c7-6RS"/>
                             <constraint firstItem="X11-LI-W94" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="320" id="uan-j4-nxR"/>
                         </constraints>
                     </view>
@@ -77,25 +76,8 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="MACircleProgressIndicator" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MACircleProgressIndicator.h"/>
-        </class>
-        <class className="MAViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MAViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onDecrease:"/>
-                <relationship kind="action" name="onIncrease:"/>
-                <relationship kind="outlet" name="largeProgressIndicator" candidateClass="MACircleProgressIndicator"/>
-                <relationship kind="outlet" name="smallProgressIndicator" candidateClass="MACircleProgressIndicator"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
+        <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
